style.css
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
}

/* rounded Styles */
.rounded-corners-button{
    padding: 12px 24px;
    border: none;
    border-radius: 999px;
    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.06);
    corner-shape: squircle;
}
.rounded-bar{
    padding: 6px 0;
    border: none;
    border-radius: 999px;
    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.06);
    corner-shape: squircle;
}
.rounded-card{
    border-radius: 36px;
    overflow: hidden;
    background: white;
    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.06);
    corner-shape: squircle;
}

/* Design Guidelines - the guidelines we got to follow
might change few if approved */
body{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
}
h1{
    font-size: 2.5rem;
    color: #3A3A3C;
}
h2{
    font-size: 2rem;
    color: #3A3A3C;
}
h3{
    font-size: 1.5rem;
    color: #3A3A3C;
}
p{
    font-size: 1rem;
    line-height: 1.6;
    color: #3A3A3C;
}
section{
    padding: 4rem 0;
}
.container{
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 3rem;
}
/* -------------end guidelines------------------- */


/* --------------------- */
/* --------Header -------*/
/* --------------------- */
.header-container{
    background-color: #FFFFFF;
    }
.nav-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 0;  
}
.nav-link-container{
    display: flex;
    gap: 2rem;
    list-style: none;
}
.nav-link-container a{
    text-decoration: none;
    color: #8E8E93;
    font-weight: 400;
    padding: 0.25rem 0.5rem;
}
.nav-link-container > li:nth-child(2) .nav-link,
.nav-link-container > li:nth-child(3) .nav-link {
    font-weight: 700;
}
.nav-link-container a:hover{
    color: #000000;
    background-color: #F2F2F7;
    border-radius: 5px;
}

/* ------------------------------ */
/* ---------Home Section--------- */
/* -------------------------------*/
.home-section{
    background-color: #F2F2F7;
}

.home-image-container{
    flex:1;
    display: flex;
    justify-content: center;
    align-items: center;
}
.home-image-circle{
    border-radius: 50%;
    background-color: #D1D1D6;
    width:65%;
    aspect-ratio: 1 / 1;
    overflow: hidden;

    display: flex;
    justify-content: center;
    align-items: center;
}
.home-image-circle img{
    width: 100%;
    /* object-fit: cover; */
    border-radius: 50%;
    /* aspect-ratio: 1 / 1; */
    

}

.home-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
}
.home-content{
    flex:1;
    display: flex;
    flex-direction: column;
    gap: 2rem;
}
.home-button{
    text-decoration: none;
    display: inline-block;
    background-color: #007AFF;
    color: #FFFFFF;
    padding: 0.75rem 1.5rem;
    align-self: flex-start;
}


/* ------------------------------ */
/* ---------About Section--------- */
/* -------------------------------*/

.about-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
}

.about-content{
    width: 70%;
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.skills-content{
    display: flex;
    flex:1;
    flex-direction: column;
    gap: 1rem;
}

.skill-item{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
}

.skill-bar-empty{
    width: 35%;
    /* flex:1; */
    height: 10px;
    background-color: #D1D1D6;
    display: flex;
    justify-content: flex-start;
    align-items: center;

}
.skill-name{
    width: 100px;
    
}

/* FILLING THE % FOR EACH SKILL */
.skill-bar-fill{
    height: 10px;
    background-color: #007AFF;
}

#fillPython{
    width: 90%;
}
#fillJava{
    width: 90%;
}

#fillJavaScript{
    width: 80%;
}

#fillReact{
    width: 70%;
}

/* -----------------------------------*/
/* ---------Projects Section--------- */
/* -----------------------------------*/
.projects-section{
    background-color: #F2F2F7;
}

.projects-container{
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 2rem;
}
.projects-cards-container{
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    gap: 2rem;
}
.project-card{
    display: flex;
    flex-direction: column;
    flex:1;
    padding: 1.5rem;
    gap: 1rem;

}


.project-image-container{
    width: 100%;
    aspect-ratio: 1 / 1;
    overflow: hidden;
}
.project-image-container img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    flex-shrink: 0;

}
.project-info-container{
    display: flex;
    flex-direction: column;
    flex:1;
    gap: 2rem;
}
.project-info-container p{
    flex: 1;
}

.project-button{
    text-decoration: none;
    display: inline-block;
    background-color: #FF9500;
    color: #FFFFFF;
    padding: 0.75rem 1.5rem;
    align-self: flex-start;
    margin-top: auto;

}

